--- a/src/stylesheets/Lungo.layout.less
+++ b/src/stylesheets/Lungo.layout.less
@@ -11,14 +11,14 @@
 @import "mixins.less";
 
 section {
-    //position: absolute; /* position: fixed on iOS5 & Android 4 */
+    // @todo: section position absolute or FIXED
+    // position: absolute; /* position: fixed on iOS5 & Android 4 */
     position: fixed;
     left:  0;
     top:  0;
     width: 100%;
     height: 100%;
-    z-index: 0;
-
+    z-index: -1;
     display: none;
     visibility: hidden;
     .transition(all 250ms @defaultTrasition);
@@ -29,8 +29,9 @@ section {
         display: block;
         visibility: visible;
     }
+
     &.hide {
-        z-index: 0;
+        z-index: -1;
         display: none;
         visibility: hidden;
     }
@@ -58,12 +59,8 @@ section {
         .transform(translate(100%, 0));
         visibility: visible !important;
 
-        &:first-child, &.show {
-            .transform(translate(0%, 0));
-        }
-        &.hide {
-            .transform(translate(-100%, 0));
-        }
+        &:first-child, &.show { .transform(translate(0%, 0)); }
+        &.hide { .transform(translate(-100%, 0)); }
     }
 }
 
@@ -73,7 +70,7 @@ header, footer  {
     width: 100%;
     height: @header-height;
     display: block;
-    z-index: 2;
+    z-index: 1;
 
     line-height: @header-height;
     overflow: hidden;
